<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:background="@drawable/guide_intro_background"
    tools:visibility="visible" >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.66" />

    <ImageView
        android:id="@+id/fire"
        android:layout_width="124dp"
        android:layout_height="124dp"
        android:src="@drawable/fire_svgrepo_com"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline33"
        app:layout_constraintEnd_toEndOf="@id/guideline66"/>

    <ImageView
        android:id="@+id/speech_balloon2"
        android:layout_width="304dp"
        android:layout_height="225dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:src="@drawable/speech_balloon2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/guide_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/boton_mundos"
        android:textAllCaps="false"
        android:textColor="#FF9800"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toTopOf="@+id/guide_description"
        app:layout_constraintEnd_toEndOf="@id/speech_balloon2"
        app:layout_constraintStart_toStartOf="@id/speech_balloon2" />

    <TextView
        android:id="@+id/guide_description"
        android:layout_width="233dp"
        android:layout_height="47dp"
        android:layout_marginBottom="116dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/text_fragment_mundos"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/speech_balloon2"
        app:layout_constraintEnd_toEndOf="@id/speech_balloon2"
        app:layout_constraintStart_toStartOf="@id/speech_balloon2" />

    <Button
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="552dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/saltar_guia"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_next"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="128dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:text="Siguiente"
        android:textColor="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>