<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/guide_intro_background">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/purple_transparent"
        android:fontFamily="@font/adlam_display"
        android:shadowColor="#A04F0B"
        android:shadowRadius="200"
        android:text="@string/bienvenida_guia"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="504dp"
        android:backgroundTint="@color/transparent"
        android:text="@string/saltar_guia"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/speech_balloon_blank"
        android:layout_width="403dp"
        android:layout_height="394dp"
        android:src="@drawable/speech_balloon_blank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_skip"
        app:layout_constraintVertical_bias="0.305" />

    <ImageView
        android:id="@+id/diamond"
        android:layout_width="127dp"
        android:layout_height="132dp"
        android:foregroundGravity="center"
        android:src="@drawable/diamond"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="226dp"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:background="@color/purple_transparent"
        android:shadowColor="#000000"
        android:shadowRadius="20"
        android:text="Comenzar"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spyro_logo"
        android:layout_centerVertical="true"
        android:text="@string/text_info_guia"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/speech_balloon_blank"
        app:layout_constraintEnd_toEndOf="@id/speech_balloon_blank"
        app:layout_constraintStart_toStartOf="@id/speech_balloon_blank"
        app:layout_constraintTop_toTopOf="@id/speech_balloon_blank" />

        <ImageView
            android:id="@+id/spyro_logo"
            android:layout_width="346dp"
            android:layout_height="235dp"
            android:layout_below="@id/app_title"
            android:src="@drawable/spyro_logo"
            app:layout_constraintTop_toBottomOf="@id/app_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>